<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyProfile"
    tools:showIn="@layout/activity_my_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:src="@mipmap/yon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin"
            android:fontFamily="@font/lato"
            android:text="@string/yonathaniel_k_mbogho"
            android:textColor="@color/grey_1000"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@color/grey_1000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ralewaylight"
                android:text="@string/tack_android"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ralewaylight"
                android:text="@string/country_kenya"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ralewaylight"
                android:text="@string/email_aviatoryona67_gmail_com"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ralewaylight"
                android:text="@string/phon_number_254711268164"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ralewaylight"
                android:text="Slack Username: @Yonathaniel K"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>